--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,13 @@ layout: compress
   <head>
     {% include head.html %}
     {% include head/custom.html %}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BPZN7HG2PH"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+    </script>
   </head>
 
   <body>
