--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,3 +19,11 @@
 <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
 
 <meta http-equiv="cleartype" content="on">
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BPZN7HG2PH"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-XXXXXXXXXX');
+</script>
